WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280243
Better error message for JIT tier dependencies
https://bugs.webkit.org/show_bug.cgi?id=280243
Summary
Better error message for JIT tier dependencies
tannal2409
Reported
2024-09-23 18:41:03 PDT
E.g. If DFG and FTL is enabled while baseline is not, we need to print error message instead of disable them silently.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2024-09-25 16:07:16 PDT
Could you please clarify the request? Where should this log go?
tannal2409
Comment 2
2024-09-25 17:40:37 PDT
This is an issue created by `git-webkit pr`. The pr is to fix two FIXME comment. The pr is here.
https://github.com/WebKit/WebKit/pull/34139
But they don't link together. Do you know how can I update my pr and linked with the issue?
Alexey Proskuryakov
Comment 3
2024-09-26 11:16:57 PDT
I see. This probably didn't work because the commit message it not formatted according to project style, and doesn't link to the bug. I'm surprised that git-webkit has let it through.
Brianna Fan
Comment 4
2024-09-27 09:54:50 PDT
We don't do any validation of the commit message until merging, so it's up to the user to follow the template that's given. If you construct a new commit `git webkit commit` can help you use the right format. Then you can paste in the bug URL and your PR should be linked to this bug.
Radar WebKit Bug Importer
Comment 5
2024-09-30 18:41:14 PDT
<
rdar://problem/137015486
>
EWS
Comment 6
2024-10-01 12:06:48 PDT
Committed
284499@main
(389c22b6c90f): <
https://commits.webkit.org/284499@main
> Reviewed commits have been landed. Closing PR #34139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug