Handle JIT tier dependencies better at compile time

https://bugs.webkit.org/show_bug.cgi?id=280243

Reviewed by Keith Miller.

Better error messages for JIT tier dependencies. If DFG and FTL are enabled
while baseline is not, print an error message instead of silently disabling
them. This fixes two FIXME comments in the code.

* Source/WTF/wtf/PlatformEnable.h:

Canonical link: https://commits.webkit.org/284499@main